# 28hw

./: db.sqlite3  manage.py  pyproject.toml
ads/: models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_description.py
ads/urls/: ad.py  category.py
ads/views/: ad.py  category.py  selection.py
data/: ad.json  csv_to_json.py  user.json
homework27/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng.py
